--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wrappid-module",
   "version": "0.0.1",
-  "description": "This is a template repository for a Wrappid app module.",
+  "description": "This is a template repository for a wrappid module.",
   "main": "index.js",
   "scripts": {
     "code:lint:app": "eslint --ignore-path .gitignore ./app",
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git:https://github.com/wrappid/wm-app-module.git"
+    "url": "git:https://github.com/wrappid/wrappid-module.git"
   },
   "keywords": [
     "wrappid",
@@ -22,14 +22,36 @@
   "author": "wrappid",
   "license": "ISC",
   "devDependencies": {
-    "@wrappid/core": "^0.0.276",
-    "@wrappid/styles": "^0.0.88",
+    "@wrappid/core": "latest",
+    "@wrappid/styles": "latest",
     "eslint": "^8.40.0",
     "eslint-plugin-etc": "^2.0.2",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-require-extensions": "^0.1.3",
     "eslint-plugin-sort-keys-fix": "^1.1.2",
     "eslint-plugin-unused-imports": "^2.0.0",
     "react-redux": "^8.0.5"
+  },
+  "dependencies": {
+    "@faker-js/faker": "^8.1.0",
+    "jest": "^27.5.1",
+    "service-core": "^3.0.1",
+    "supertest": "^6.3.3"
+  },
+  "jest": {
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+      "**/*.{js,jsx,ts}",
+      "!**/node_modules/**"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 0,
+        "functions": 0,
+        "lines": 0,
+        "statements": 0
+      }
+    }
   }
 }
