build(global): update package and package loc json
update package and package loc json

Ref: #50

--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "@commitlint/config-conventional": "~17.4.4",
     "@commitlint/prompt-cli": "~17.5.0",
     "@faker-js/faker": "~8.1.0",
-    "@types/bcrypt": "^5.0.2",
-    "@types/jsonwebtoken": "^9.0.6",
+    "@types/bcrypt": "~5.0.2",
+    "@types/jsonwebtoken": "~9.0.6",
     "@wrappid/core": "latest",
     "@wrappid/service-core": "latest",
     "@wrappid/styles": "latest",
