--- a/package.json
+++ b/package.json
@@ -38,8 +38,11 @@
     "@commitlint/config-conventional": "~17.4.4",
     "@commitlint/prompt-cli": "~17.5.0",
     "@faker-js/faker": "~8.1.0",
+    "@jest/globals": "~29.7.0",
     "@types/bcrypt": "~5.0.2",
+    "@types/jest": "~29.5.12",
     "@types/jsonwebtoken": "~9.0.6",
+    "@types/supertest": "~6.0.2",
     "@wrappid/core": "latest",
     "@wrappid/service-core": "latest",
     "@wrappid/styles": "latest",
@@ -57,9 +60,9 @@
     "jest": "~29.7.0",
     "license-checker": "~25.0.1",
     "react-redux": "~8.0.5",
+    "standard-version": "~9.5.0",
     "supertest": "~6.3.3",
-    "yup": "~1.3.3",
     "ts-jest": "~29.1.2",
-    "standard-version": "~9.5.0"
+    "yup": "~1.3.3"
   }
 }
