--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "standard-version": "~9.5.0",
     "supertest": "~6.3.3",
     "ts-jest": "~29.1.2",
+    "ulid": "^2.3.0",
     "yup": "~1.3.3"
   }
 }
