--- a/package.json
+++ b/package.json
@@ -42,10 +42,12 @@
     "@types/bcrypt": "~5.0.2",
     "@types/jest": "~29.5.12",
     "@types/jsonwebtoken": "~9.0.6",
+    "@types/otp-generator": "^4.0.2",
     "@types/supertest": "~6.0.2",
     "@wrappid/core": "latest",
     "@wrappid/service-core": "latest",
     "@wrappid/styles": "latest",
+    "bcrypt": "^5.1.1",
     "eslint": "~8.40.0",
     "eslint-import-resolver-typescript": "~3.6.1",
     "eslint-plugin-etc": "~2.0.2",
@@ -56,9 +58,11 @@
     "eslint-plugin-require-extensions": "~0.1.3",
     "eslint-plugin-sort-keys-fix": "~1.1.2",
     "eslint-plugin-unused-imports": "~2.0.0",
+    "googleapis": "^140.0.1",
     "husky": "~8.0.3",
     "jest": "~29.7.0",
     "license-checker": "~25.0.1",
+    "otp-generator": "^4.0.1",
     "react-redux": "~8.0.5",
     "standard-version": "~9.5.0",
     "supertest": "~6.3.3",
